[tool.poetry]
name = "visualize-mesh"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
trimesh = "^4.4.0"
pyglet = "<2.0.0"
pillow = "^10.3.0"
pyvista = "^0.43.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
